--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slider": "^2.0.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "sweetalert2": "^11.6.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
