--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_URL="https://back-deconfort.onrender.com/"
+REACT_APP_URL="http://localhost:8000/"
+ACCESS_TOKEN=APP_USR-537691465530679-121318-8bbc230b0af6d8f1705e1a22a96b0d63-1262875102
