--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@fontsource/abhaya-libre": "^4.5.9",
     "@fontsource/open-sans": "^4.5.13",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-slider": "^2.0.4",
+    "reactstrap": "^9.1.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "sweetalert2": "^11.6.15",
